# ComfyUI-Telegram-Sender

./: .gitignore  README.md  __init__.py  implementation_plan.md  metadata_utils.py  pyproject.toml  telegram_api.py  telegram_config.json  telegram_metadata.py  telegram_sender.py  telegram_settings.py  verify_fixes.py
assets/: nsfw_triggers.json
js/: telegram_settings.js
modules/: capture.py  hook.py
modules/defs/: formatters.py  validators.py
modules/defs/ext/: __init__.py  easyuse_nodes.py  efficiency_nodes.py
telegram_modules/defs/: formatters.py
telegram_modules/nodes/: node.py
telegram_modules/utils/: civitai_fetch.py  hash.py  log.py
