[project]
name = "telegram-sender"
description = "Does the same thing as comfyui_image_metadata_extension but is slightly more modern, sending the output to Telegram and downloading unnecessary metadata at the same time."
version = "1.0.0"
license = {file = "LICENSE"} 
classifiers = [
    # For OS-independent nodes (works on all operating systems)
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]


[project.urls]
Repository = "https://github.com/Sergey004/ComfyUI-Telegram-Sender"
#  Used by Comfy Registry https://registry.comfy.org
"Bug Tracker" = "https://github.com/Sergey004/ComfyUI-Telegram-Sender/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.comfy]
PublisherId = "Sergey004"
DisplayName = "ComfyUI-Telegram-Sender"
Icon = ""
includes = [] 

